crates/stef-build/tests/snapshots/compiler__compile-extra@alias.stef.snap
---
source: crates/stef-build/tests/compiler.rs
expression: "/// Hello world!\ntype Sample = String;"
input_file: crates/stef-build/tests/inputs-extra/alias.stef
---
#[allow(unused_imports)]
use ::stef::buf::{Decode, Encode};
/// Hello world!
#[allow(dead_code, clippy::module_name_repetitions, clippy::option_option)]
pub type Sample = String;

