crates/stef-build/tests/snapshots/compiler__compile-extra@enum.stef.snap
---
source: crates/stef-build/tests/compiler.rs
expression: "/// Hello world!\nenum Sample {\n    Variant1 @1,\n    Variant2(u32 @1, u8 @2) @2,\n    Variant3 {\n        field1: string @1,\n        field2: vec<bool> @2,\n    } @3,\n}"
input_file: crates/stef-build/tests/inputs-extra/enum.stef
---
#[allow(unused_imports)]
use ::stef::buf::{Decode, Encode};
/// Hello world!
#[derive(Clone, Debug, PartialEq)]
#[allow(clippy::module_name_repetitions, clippy::option_option)]
pub enum Sample {
    Variant1,
    Variant2(u32, u8),
    Variant3 { field1: String, field2: Vec<bool> },
}
#[automatically_derived]
impl ::stef::Encode for Sample {
    #[allow(
        clippy::borrow_deref_ref,
        clippy::semicolon_if_nothing_returned,
        clippy::too_many_lines,
    )]
    fn encode(&self, w: &mut impl ::stef::BufMut) {
        match self {
            Self::Variant1 => {
                ::stef::buf::encode_id(w, 1);
            }
            Self::Variant2(n0, n1) => {
                ::stef::buf::encode_id(w, 2);
                ::stef::buf::encode_field(w, 1, |w| { ::stef::buf::encode_u32(w, *n0) });
                ::stef::buf::encode_field(w, 2, |w| { ::stef::buf::encode_u8(w, *n1) });
                ::stef::buf::encode_u32(w, ::stef::buf::END_MARKER);
            }
            Self::Variant3 { field1, field2 } => {
                ::stef::buf::encode_id(w, 3);
                ::stef::buf::encode_field(
                    w,
                    1,
                    |w| { ::stef::buf::encode_string(w, &*field1) },
                );
                ::stef::buf::encode_field(
                    w,
                    2,
                    |w| {
                        ::stef::buf::encode_vec(
                            w,
                            &*field2,
                            |w, v| {
                                ::stef::buf::encode_bool(w, *v);
                            },
                        )
                    },
                );
                ::stef::buf::encode_u32(w, ::stef::buf::END_MARKER);
            }
        }
    }
}
#[automatically_derived]
impl ::stef::Decode for Sample {
    #[allow(clippy::too_many_lines)]
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        match ::stef::buf::decode_id(r)? {
            1 => Ok(Self::Variant1),
            2 => {
                let mut n0: Option<u32> = None;
                let mut n1: Option<u8> = None;
                loop {
                    match ::stef::buf::decode_id(r)? {
                        ::stef::buf::END_MARKER => break,
                        1 => n0 = Some(::stef::buf::decode_u32(r)?),
                        2 => n1 = Some(::stef::buf::decode_u8(r)?),
                        _ => continue,
                    }
                }
                Ok(
                    Self::Variant2(
                        n0
                            .ok_or(::stef::buf::Error::MissingField {
                                id: 1,
                                name: None,
                            })?,
                        n1
                            .ok_or(::stef::buf::Error::MissingField {
                                id: 2,
                                name: None,
                            })?,
                    ),
                )
            }
            3 => {
                let mut field1: Option<String> = None;
                let mut field2: Option<Vec<bool>> = None;
                loop {
                    match ::stef::buf::decode_id(r)? {
                        ::stef::buf::END_MARKER => break,
                        1 => field1 = Some(::stef::buf::decode_string(r)?),
                        2 => {
                            field2 = Some(
                                ::stef::buf::decode_vec(
                                    r,
                                    |r| { ::stef::buf::decode_bool(r) },
                                )?,
                            );
                        }
                        _ => continue,
                    }
                }
                Ok(Self::Variant3 {
                    field1: field1
                        .ok_or(::stef::buf::Error::MissingField {
                            id: 1,
                            name: Some("field1"),
                        })?,
                    field2: field2
                        .ok_or(::stef::buf::Error::MissingField {
                            id: 2,
                            name: Some("field2"),
                        })?,
                })
            }
            id => Err(::stef::buf::Error::UnknownVariant(id)),
        }
    }
}

