crates/stef-build/tests/snapshots/compiler__compile-extra@import.stef.snap
---
source: crates/stef-build/tests/compiler.rs
expression: "use other::module;\nuse other::module::Type;"
input_file: crates/stef-build/tests/inputs-extra/import.stef
---
#[allow(unused_imports)]
use ::stef::buf::{Decode, Encode};
use other::module;
use other::module::Type;

