crates/stef-build/tests/snapshots/compiler__compile-extra@module.stef.snap
---
source: crates/stef-build/tests/compiler.rs
expression: "/// Hello world!\nmod sample {}"
input_file: crates/stef-build/tests/inputs-extra/module.stef
---
#[allow(unused_imports)]
use ::stef::buf::{Decode, Encode};
/// Hello world!
pub mod sample {
    #[allow(unused_imports)]
    use ::stef::buf::{Decode, Encode};
}

