crates/stef-build/tests/snapshots/compiler__compile@alias-basic.stef.snap
---
source: crates/stef-build/tests/compiler.rs
expression: "/// Sample type alias.\ntype Sample = u32;"
input_file: crates/stef-parser/tests/inputs/alias-basic.stef
---
#[allow(unused_imports)]
use ::stef::buf::{Decode, Encode};
/// Sample type alias.
#[allow(dead_code, clippy::module_name_repetitions, clippy::option_option)]
pub type Sample = u32;

