crates/stef-build/tests/snapshots/compiler__compile@alias_basic.stef.snap
---
source: crates/stef-build/tests/compiler.rs
description: "/// Sample type alias.\ntype Sample = u32;"
input_file: crates/stef-parser/tests/inputs/alias_basic.stef
---
#[allow(unused_imports)]
use ::stef::buf::{Decode, Encode, Size};
/// Sample type alias.
#[allow(dead_code, clippy::module_name_repetitions, clippy::option_option)]
pub type Sample = u32;

