crates/stef-build/tests/snapshots/compiler__compile@attribute-multi.stef.snap
---
source: crates/stef-build/tests/compiler.rs
expression: "#[validate(min = 1, max = 100)]\nstruct Sample"
input_file: crates/stef-parser/tests/inputs/attribute-multi.stef
---
#[derive(Clone, Debug, PartialEq, PartialOrd)]
pub struct Sample;
#[automatically_derived]
impl ::stef::Encode for Sample {
    #[allow(clippy::needless_borrow)]
    fn encode(&self, w: &mut impl ::stef::BufMut) {}
}
#[automatically_derived]
impl ::stef::Decode for Sample {
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        Ok(Self)
    }
}

