crates/stef-build/tests/snapshots/compiler__compile@attribute-single.stef.snap
---
source: crates/stef-build/tests/compiler.rs
expression: "#[deprecated = \"don't use\"]\nstruct Sample"
input_file: crates/stef-parser/tests/inputs/attribute-single.stef
---
pub struct Sample;
impl ::stef::Encode for Sample {
    fn encode(&self, w: &mut impl ::stef::BufMut) {}
}
impl ::stef::Decode for Sample {
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        Ok(Self)
    }
}

