crates/stef-build/tests/snapshots/compiler__compile@attribute-unit.stef.snap
---
source: crates/stef-build/tests/compiler.rs
expression: "#[deprecated]\nstruct Sample"
input_file: crates/stef-parser/tests/inputs/attribute-unit.stef
---
#[allow(unused_imports)]
use ::stef::buf::{Decode, Encode};
#[derive(Clone, Debug, PartialEq)]
pub struct Sample;
#[automatically_derived]
impl ::stef::Encode for Sample {
    #[allow(
        clippy::borrow_deref_ref,
        clippy::explicit_auto_deref,
        clippy::needless_borrow,
    )]
    fn encode(&self, w: &mut impl ::stef::BufMut) {}
}
#[automatically_derived]
impl ::stef::Decode for Sample {
    #[allow(clippy::type_complexity)]
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        Ok(Self)
    }
}

